--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,45 @@
 appdirs==1.4.4
 asgiref==3.3.4
+certifi==2021.5.30
+chardet==4.0.0
+colorama==0.4.4
+configparser==5.0.2
+crayons==0.4.0
 cycler==0.10.0
 distlib==0.3.2
+dj-database-url==0.5.0
 Django==3.2.4
+django-heroku==0.3.1
 filelock==3.0.12
 gunicorn==20.1.0
+idna==2.10
 joblib==1.0.1
+kaggle==1.5.12
 kiwisolver==1.3.1
 matplotlib==3.4.2
 mysqlclient==2.0.3
 numpy==1.20.3
 pandas==1.2.4
 Pillow==8.2.0
+psycopg2==2.9.1
 pyparsing==2.4.7
 PyQt5==5.15.4
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.9.0
 python-dateutil==2.8.1
+python-decouple==3.4
+python-slugify==5.0.2
 pytz==2021.1
+requests==2.25.1
 scikit-learn==0.24.2
 scipy==1.6.3
 selenium==3.141.0
 six==1.16.0
 sqlparse==0.4.1
+text-unidecode==1.3
 threadpoolctl==2.1.0
+tqdm==4.61.2
 urllib3==1.26.5
 virtualenv==20.4.7
+webdriver-manager==3.4.2
 whitenoise==5.2.0
